# Grammar-Guided-Genetic-Programming-

./: README.md  pyproject.toml  pytest.ini  run.py
gggp/: __init__.py  complexity.py  fitness.py  grammar.py  individual.py  population.py  selection.py  tree.py  variation.py
tests/: test_complexity.py  test_fitness.py  test_grammar.py  test_individual.py  test_selection.py
