[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gggp"
version = "0.1.0"
description = "Grammar-guided genetic programming toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Grammar GP Team" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
